1.1.0 (2015-04-26)
ADD: 'Recently Added' (Red Bull TV)
FIX: show correct 'Featured Shows' (Red Bull TV)

1.0.1 (2015-04-22)
UPD: public release

1.0.0~beta2 (2015-04-21)
UPD: optimized navigation in 'sports'

1.0.0~beta1 (2015-04-16)
ADD: initial release